tools/move-unit-test/tests/test_sources/native_signer_creation.storage.exp
Running Move unit tests
[ PASS    ] 0x1::M::test_determinisim
[ FAIL    ] 0x1::M::test_doesnt_exist
[ PASS    ] 0x1::M::test_exists
0x1::M::test_determinisim
Output: Ok("")
0x1::M::test_doesnt_exist
Output: Ok("0x0:\n\t=> key 0x1::M::A {\n\t    dummy_field: false\n\t}\n0x100000000000000000000000000000000000000000000000000000000000000:\n\t=> key 0x1::M::A {\n\t    dummy_field: false\n\t}\n0x200000000000000000000000000000000000000000000000000000000000000:\n\t=> key 0x1::M::A {\n\t    dummy_field: false\n\t}\n0x300000000000000000000000000000000000000000000000000000000000000:\n\t=> key 0x1::M::A {\n\t    dummy_field: false\n\t}\n0x400000000000000000000000000000000000000000000000000000000000000:\n\t=> key 0x1::M::A {\n\t    dummy_field: false\n\t}\n0x500000000000000000000000000000000000000000000000000000000000000:\n\t=> key 0x1::M::A {\n\t    dummy_field: false\n\t}\n0x600000000000000000000000000000000000000000000000000000000000000:\n\t=> key 0x1::M::A {\n\t    dummy_field: false\n\t}\n0x700000000000000000000000000000000000000000000000000000000000000:\n\t=> key 0x1::M::A {\n\t    dummy_field: false\n\t}\n0x800000000000000000000000000000000000000000000000000000000000000:\n\t=> key 0x1::M::A {\n\t    dummy_field: false\n\t}\n0x900000000000000000000000000000000000000000000000000000000000000:\n\t=> key 0x1::M::A {\n\t    dummy_field: false\n\t}\n")
0x1::M::test_exists
Output: Ok("0x0:\n\t=> key 0x1::M::A {\n\t    dummy_field: false\n\t}\n0x100000000000000000000000000000000000000000000000000000000000000:\n\t=> key 0x1::M::A {\n\t    dummy_field: false\n\t}\n0x200000000000000000000000000000000000000000000000000000000000000:\n\t=> key 0x1::M::A {\n\t    dummy_field: false\n\t}\n0x300000000000000000000000000000000000000000000000000000000000000:\n\t=> key 0x1::M::A {\n\t    dummy_field: false\n\t}\n0x400000000000000000000000000000000000000000000000000000000000000:\n\t=> key 0x1::M::A {\n\t    dummy_field: false\n\t}\n0x500000000000000000000000000000000000000000000000000000000000000:\n\t=> key 0x1::M::A {\n\t    dummy_field: false\n\t}\n0x600000000000000000000000000000000000000000000000000000000000000:\n\t=> key 0x1::M::A {\n\t    dummy_field: false\n\t}\n0x700000000000000000000000000000000000000000000000000000000000000:\n\t=> key 0x1::M::A {\n\t    dummy_field: false\n\t}\n0x800000000000000000000000000000000000000000000000000000000000000:\n\t=> key 0x1::M::A {\n\t    dummy_field: false\n\t}\n0x900000000000000000000000000000000000000000000000000000000000000:\n\t=> key 0x1::M::A {\n\t    dummy_field: false\n\t}\n")

Test failures:

Failures in 0x1::M:

┌── test_doesnt_exist ──────
│ error[E11001]: test failure
│    ┌─ native_signer_creation.move:47:9
│    │
│ 36 │     fun test_doesnt_exist() {
│    │         ----------------- In this function in 0x1::M
│    ·
│ 47 │         abort 0
│    │         ^^^^^^^ Test was not expected to error, but it aborted with code 0 originating in the module 0000000000000000000000000000000000000000000000000000000000000001::M rooted here
│ 
│ 
│ ────── Storage state at point of failure ──────
│ 0x0:
│ 	=> key 0x1::M::A {
│ 	    dummy_field: false
│ 	}
│ 0x100000000000000000000000000000000000000000000000000000000000000:
│ 	=> key 0x1::M::A {
│ 	    dummy_field: false
│ 	}
│ 0x200000000000000000000000000000000000000000000000000000000000000:
│ 	=> key 0x1::M::A {
│ 	    dummy_field: false
│ 	}
│ 0x300000000000000000000000000000000000000000000000000000000000000:
│ 	=> key 0x1::M::A {
│ 	    dummy_field: false
│ 	}
│ 0x400000000000000000000000000000000000000000000000000000000000000:
│ 	=> key 0x1::M::A {
│ 	    dummy_field: false
│ 	}
│ 0x500000000000000000000000000000000000000000000000000000000000000:
│ 	=> key 0x1::M::A {
│ 	    dummy_field: false
│ 	}
│ 0x600000000000000000000000000000000000000000000000000000000000000:
│ 	=> key 0x1::M::A {
│ 	    dummy_field: false
│ 	}
│ 0x700000000000000000000000000000000000000000000000000000000000000:
│ 	=> key 0x1::M::A {
│ 	    dummy_field: false
│ 	}
│ 0x800000000000000000000000000000000000000000000000000000000000000:
│ 	=> key 0x1::M::A {
│ 	    dummy_field: false
│ 	}
│ 0x900000000000000000000000000000000000000000000000000000000000000:
│ 	=> key 0x1::M::A {
│ 	    dummy_field: false
│ 	}
│ 
└──────────────────

Test result: FAILED. Total tests: 3; passed: 2; failed: 1
